--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -26,7 +26,7 @@
 		<div class="col-xs-6 text-center" class="task">
 			  {{#each burger_data}}
 			  	{{#if this.devoured}}
-				  {{!-- {{> Burgers/Burger-block devoured=false}} --}}
+				  {{!-- {{> Burgers/Burger-block devoured=false}} --
 			  		<input class="form-control" type="text" placeholder="{{this.id}} . {{this.burger_name}}" readonly>
 				{{/if}}
 			  {{/each}}
